[package]
name = "eologsave"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/eologsave"

[[bin]]
path = "main.rs"
name = "eologsave"

[dependencies]
ureq = { version = "2.10.1", features = ["http-crate"] }
flate2 = "1.0.32"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
chrono = { version = "0.4.38", default-features = false, features = ["alloc"] }
url = "2.5"
xz2 = "0.1.7"
itoa = "1.0"
