[package]
name = "teo-logsave"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/teo-logsave"

[[bin]]
path = "main.rs"
name = "teo-logsave"

[dependencies]
# tcapi
hex = "0.4"
itoa = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
url = "2.5"
http = "1.1"
# main
ureq = { version = "2.10", features = ["http-crate"] }
flate2 = "^1.0.33"
xz2 = "^0.1.7"
