[package]
name = "teo-utils"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/Berylsoft/teo-utils"

[[bin]]
path = "logsave.rs"
name = "teo-logsave"

[[bin]]
path = "certupdate.rs"
name = "teo-certupdate"

[dependencies]
tcapi-ureq-example = { path = "../tcapi/ureq-example" }

chrono = { version = "0.4", default-features = false, features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.5"

ureq = { version = "2.10", features = ["http-crate"] }
flate2 = "^1.0.33"
xz2 = "^0.1.7"
